riff_bindgen/src/render/kotlin/snapshots/riff_bindgen__render__kotlin__templates__tests__snapshot_async_function_returning_string.snap
---
source: riff_bindgen/src/render/kotlin/templates.rs
expression: template.render().unwrap()
---
suspend fun fetchData(url: String): String = riffCallAsync(
    createFuture = {
        val urlWire = WireWriterPool.acquire(RiffWire.sizeString(url))
        try {
            run {
                val wire = urlWire.writer
                RiffWire.writeString(url)
            }
            Native.riff_fetch_data(urlWire.ptr, urlWire.len)
        } finally {
            urlWire.close().close()
        }
    },
    poll = { future, contHandle -> Native.riff_fetch_data_poll(future, contHandle) },
    complete = { future ->
        val buf = Native.riff_fetch_data_complete(future) ?: throw FfiException(-1, "Null buffer returned")
        val reader = WireReader(buf)
        reader.readString()
    },
    free = { future -> Native.riff_fetch_data_free(future) },
    cancel = { future -> Native.riff_fetch_data_cancel(future) }
)
