riff_bindgen/src/render/kotlin/snapshots/riff_bindgen__render__kotlin__templates__tests__snapshot_async_function_with_multiple_params.snap
---
source: riff_bindgen/src/render/kotlin/templates.rs
expression: template.render().unwrap()
---
suspend fun sendRequest(url: String, body: ByteArray, timeout: Int): ByteArray = riffCallAsync(
    createFuture = {
        val urlWire = WireWriterPool.acquire(RiffWire.sizeString(url))
        val bodyWire = WireWriterPool.acquire(RiffWire.sizeBytes(body))
        try {
            run {
                val wire = urlWire.writer
                RiffWire.writeString(url)
            }
            run {
                val wire = bodyWire.writer
                RiffWire.writeBytes(body)
            }
            Native.riff_send_request(urlWire.ptr, urlWire.len, bodyWire.ptr, bodyWire.len, timeout)
        } finally {
            urlWire.close().close()
            bodyWire.close().close()
        }
    },
    poll = { future, contHandle -> Native.riff_send_request_poll(future, contHandle) },
    complete = { future ->
        val buf = Native.riff_send_request_complete(future) ?: throw FfiException(-1, "Null buffer returned")
        val reader = WireReader(buf)
        reader.readBytes()
    },
    free = { future -> Native.riff_send_request_free(future) },
    cancel = { future -> Native.riff_send_request_cancel(future) }
)
