riff_bindgen/src/render/kotlin/snapshots/riff_bindgen__render__kotlin__templates__tests__snapshot_class_with_constructor_and_method.snap
---
source: riff_bindgen/src/render/kotlin/templates.rs
expression: template.render().unwrap()
---
class Database private constructor(internal val handle: Long) : AutoCloseable {
    private val closed = AtomicBoolean(false)

    constructor(path: String) : this(
        kotlin.run {
            val pathWire = WireWriterPool.acquire(RiffWire.sizeString(path))
            try {
                kotlin.run {
                    val wire = pathWire.writer
                    RiffWire.writeString(path)
                }
                Native.riff_database_open(pathWire.ptr, pathWire.len)
            } finally {
                pathWire.close().close()
            }
        }
    )

    override fun close() {
        if (!closed.compareAndSet(false, true)) return
        Native.riff_database_free(handle)
    }

    fun query(sql: String): String { /* impl */ }
}
