riff_bindgen/src/render/kotlin/snapshots/riff_bindgen__render__kotlin__templates__tests__snapshot_class_with_fallible_constructor.snap
---
source: riff_bindgen/src/render/kotlin/templates.rs
expression: template.render().unwrap()
---
class Connection private constructor(internal val handle: Long) : AutoCloseable {
    private val closed = AtomicBoolean(false)

    constructor(url: String) : this(
        kotlin.run {
            val urlWire = WireWriterPool.acquire(RiffWire.sizeString(url))
            try {
                kotlin.run {
                    val wire = urlWire.writer
                    RiffWire.writeString(url)
                }
                val handle = Native.riff_connection_open(urlWire.ptr, urlWire.len)
                if (handle == 0L) throw FfiException(1, Native.riff_last_error_message())
                handle
            } finally {
                urlWire.close().close()
            }
        }
    )

    override fun close() {
        if (!closed.compareAndSet(false, true)) return
        Native.riff_connection_free(handle)
    }
}
