riff_bindgen/src/render/kotlin/snapshots/riff_bindgen__render__kotlin__templates__tests__snapshot_class_with_nullable_handle_return.snap
---
source: riff_bindgen/src/render/kotlin/templates.rs
expression: template.render().unwrap()
---
class Cache private constructor(internal val handle: Long) : AutoCloseable {
    private val closed = AtomicBoolean(false)

    override fun close() {
        if (!closed.compareAndSet(false, true)) return
        Native.riff_cache_free(handle)
    }

    fun find(key: String): Cache? { val ptr = Native.riff_cache_find(handle, key); return if (ptr == 0L) null else Cache(ptr) }
}
